--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
         </form>
         <div class="peaple">
             <div>
-                <img src="img/people/aadi.JPG" alt="">
+                <img src="img/people/aadi.jpg" alt="">
                 <p><span>Aaditya Raj</span>Founder <br>Phone: +91-77425-38482 <br>Email: adraj26082002@gmail.com</p>
             </div>
             <div>
